--- a/src/container/info/index.hbs
+++ b/src/container/info/index.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
 
-<h1>Користувач створений</h1>
+<h1>{{info}}</h1>
 <a href="/">Повернутися назад</a>
 
 {{!
