--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -2,29 +2,78 @@
 Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
+<main>
+  <section>
+    <div class="form">
+      <h1 class="form__title">Створити користувача</h1>
+      <form method="POST" action="/user-create">
+        <div class="form__content">
+          <div class="form__field">
+            <label for="email" class="form__label">Email адреса:</label>
+            <input type="email" name="email" class="form__input">
+          </div>
 
-<div class="form">
-  <h1 class="form__title">Створити користувача</h1>
-  <form method="POST" action="/user-create">
-    <div class="form__content">
-      <div class="form__field">
-        <label for="email" class="form__label">Email адреса:</label>
-        <input type="email" name="email" class="form__input">
-      </div>
+          <div class="form__field">
+            <label for="login" class="form__label">Логін:</label>
+            <input type="login" name="login" class="form__input">
+          </div>
 
-      <div class="form__field">
-        <label for="login" class="form__label">Логін:</label>
-        <input type="login" name="login" class="form__input">
-      </div>
-
-      <div class="form__field">
-        <label for="password" class="form__label">Пароль:</label>
-        <input type="password" name="password" class="form__input">
-      </div>
-      <button class="form__button">Створити</button>
+          <div class="form__field">
+            <label for="password" class="form__label">Пароль:</label>
+            <input type="password" name="password" class="form__input">
+          </div>
+          <button class="form__button">Створити</button>
+        </div>
+      </form>
     </div>
-  </form>
-</div>
+  </section>
+
+  <section>
+    <div class="form">
+      <h1 class="form__title">Список користувачів</h1>
+      <div class="user-list">
+        User list
+      </div>
+      {{#with data.users}}
+      {{#if isEmpty}}
+      <mark>Список користувачів пустий</mark>
+      {{else}}
+      <ul>
+        {{#each list}}
+        <li>{{email}} || {{login}} || {{id}}<a href="/user-delete?id={{id}}">(Видалити)</a></li>
+        {{/each}}
+      </ul>
+      {{/if}}
+      {{/with}}
+    </div>
+  </section>
+
+  <section>
+    <div class="form">
+      <h1 class="form__title">Оновити пошту користувача</h1>
+      <form method="POST" action="/user-update">
+        <div class="form__content">
+          <div class="form__field">
+            <label for="id" class="form__label">ID:</label>
+            <input type="id" name="id" class="form__input">
+          </div>
+
+          <div class="form__field">
+            <label for="email" class="form__label">Нова Email адреса:</label>
+            <input type="email" name="email" class="form__input">
+          </div>
+
+          <div class="form__field">
+            <label for="password" class="form__label">Пароль:</label>
+            <input type="password" name="password" class="form__input">
+          </div>
+          <button class="form__button">Відправити</button>
+        </div>
+      </form>
+    </div>
+  </section>
+</main>
+
 
 {{!
 Цей код містить лише те, що буде виводитись в
