--- a/src/container/product-create/index.hbs
+++ b/src/container/product-create/index.hbs
@@ -22,7 +22,8 @@
 
           <div class="form__field">
             <label for="description" class="form__label">Короткий опис:</label>
-            <input type="text" name="description" class="form__input">
+            <textarea type="text" name="description" class="form__input"></textarea>
+
             <label for="description" class="form__label--comment">Відображається у картці товару</label>
           </div>
           <button class="form__button">Створити товар</button>
