--- a/src/container/alert/index.hbs
+++ b/src/container/alert/index.hbs
@@ -5,10 +5,10 @@
 <section>
   <div class="alert">
     <div class="alert__info">
-      <h1>{{alert}}</h1>
-      <h2>{{alert_msg}}</h2>
+      <h1>{{data.message}}</h1>
+      <h2>{{data.info}}</h2>
     </div>
-    <a href="/product-list" class="alert__button">Повернутися назад</a>
+    <a href="{{data.link}}" class="alert__button">Повернутися назад</a>
   </div>
 </section>
 
