--- a/src/lib/var.scss
+++ b/src/lib/var.scss
@@ -3,7 +3,9 @@ $colorMap: (
     mine: #3e77b6,
     delred: #ff0000,
     border: #CED4DA,
-    gray: #212529
+    gray: #212529,
+    sfydarck: #121212,
+    textlight: #FFFEFE,
 );
 
 @function color ($key) {
